// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-overlay Custom Footer 1`] = `
<div>
  <div
    class="m-overlay"
    title="Title"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Open 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-overlay Default Story 1`] = `
<div>
  <div
    class="m-overlay"
    title="Title"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Open 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-overlay Loading 1`] = `
<div>
  <div
    class="m-overlay"
    title="Titre"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Open 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-overlay Overflow Content 1`] = `
<div>
  <div
    class="m-overlay"
    title="Title"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Open 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-overlay Sandbox 1`] = `
<div
  class="m-overlay"
>
   
  <div
    class="v-portal"
    style="display: none;"
  />
</div>
`;
